Fixed the columns overflowing the viewport

--- a/PresentationLayer/Content/Site.css
+++ b/PresentationLayer/Content/Site.css
@@ -29,9 +29,22 @@ textarea {
   margin-bottom:0px;
   position:fixed;
   width:100%;
+  margin-left:200px;
 }
+
 .container-right{   
     top: 15px;
     padding:0px;    
     z-index:-1;
+    margin-left:200px;
+    width:calc(100% - 200px);
+}
+@media (max-width: 768px){
+    .container-right{   
+        margin-left:0px;
+        width:100%
+    }
+    .navbar{
+        margin-left:0px;
+    }
 }
